--- a/xfapplyLib/build.gradle
+++ b/xfapplyLib/build.gradle
@@ -22,10 +22,14 @@ android {
 //        applicationId "com.moft.xfapply"
         minSdkVersion 17
         targetSdkVersion 27
-        versionCode 22
-        versionName "2.2"
+        versionCode 26
+        versionName "2.6"
 //        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters 'armeabi-v7a', 'armeabi', 'x86'
+        }
     }
     buildTypes {
         release {
