--- a/xfapplyLib/src/main/AndroidManifest.xml
+++ b/xfapplyLib/src/main/AndroidManifest.xml
@@ -30,22 +30,22 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
-    <application>
-<!--        android:name="com.moft.xfapply.app.LvApplication"-->
-<!--        android:allowBackup="true"-->
-<!--        android:icon="@drawable/ic_launcher"-->
-<!--        android:label="@string/app_name"-->
-<!--        android:supportsRtl="true"-->
-<!--        android:theme="@style/AppTheme"-->
+    <application
+        android:name="com.moft.xfapply.app.LvApplication"
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.moft.xfapply.activity.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.moft.xfapply.activity.PrepareActivity"
@@ -271,10 +271,6 @@
         <service
             android:name="com.moft.xfapply.service.LocationService"
             android:label="位置上报服务" />
-
-        <!--<meta-data-->
-        <!--android:name="com.baidu.lbsapi.API_KEY"-->
-        <!--android:value="H3fcflXbch4NzsyDlGxKIApUACiHXnAP" />-->
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
